--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/api/ws",
-      "dest": "api/ws.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "public/$1"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api" }
   ]
 }
