--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api" }
+  "version": 2,
+  "routes": [
+    {
+      "src": "/api/.*",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
   ]
 }
